--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -122,7 +122,7 @@
 
   <section class="top-nav">
     <div>
-      <p>ITSA</p>
+      <p>CMIS Connect</p>
     </div>
     <input id="menu-toggle" type="checkbox">
     <label class="menu-button-container" for="menu-toggle">
@@ -132,7 +132,7 @@
       <li><a href="/project/webpages/homepage.html" class="current">Home</a></li>
       <li><a href="/project/webpages/about.html">About</a></li>
       <li><a href="/project/webpages/officers.html">Officers</a></li>
-      <li><a href="/project/webpages/meetings.html">Meetings</a></li>
+      <li><a href="/project/webpages/meetings.html">Events</a></li>
       <li><a href="/project/webpages/accomplishments.html">Accomplishments</a></li>
       <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
     </ul>
@@ -140,52 +140,62 @@
 
   <section class="hero">
     <div class="hero-overlay">
-      <h1>Welcome to the ITSA</h1>
+      <h1>Welcome to CMIS Connect/h1>
     </div>
   </section>
 
   <section class="events">
-    <h2>🗓 ITSA Upcoming Events Calendar</h2>
+    <h2>🗓 CMIS Events Calendar</h2>
     <iframe src="https://calendar.google.com/calendar/embed?src=d6805ad1a782e4a6ae56e3ccd0005dc2adaf6f28733fca60b3f026489cfd21db%40group.calendar.google.com&color=%23D35400&src=en.usa%23holiday%40group.v.calendar.google.com&color=%230F4B9E&ctz=America%2FLos_Angeles" style="border: 0" frameborder="0" scrolling="no"></iframe>
 
-  <section class="content-grid">
-    <a href="/project/webpages/about.html" class="card-link">
-      <article class="card">
-        <h2>Who We Are</h2>
-        <p>The Information Technology Student Association (ITSA) is a community of SHSU students passionate about tech, leadership, and collaboration.</p>
-      </article>
-    </a>
-    <a href="/project/webpages/about.html" class="card-link">
-      <article class="card">
-        <h2>Our Mission</h2>
-        <p>We aim to empower students through tech-focused events, workshops, and mentorship to help build their future careers in IT and related fields.</p>
-      </article>
-    </a>
-    <a href="/project/webpages/imagegallery.html" class="card-link">
-      <article class="card">
-        <h2>Events & Workshops</h2>
-        <p>From coding bootcamps to career panels, we host a variety of events each semester to help you grow your skills and network.</p>
-      </article>
-    </a>
-    <a href="/project/webpages/officers.html" class="card-link">
-      <article class="card">
-        <h2>Officer Team</h2>
-        <p>Meet the dedicated students leading our organization — planning events, coordinating with faculty, and helping the ITSA grow every year.</p>
-      </article>
-    </a>
-    <a href="https://shsu.campuslabs.com/engage/organization/itsa" target="_blank" class="card-link">
-      <article class="card">
-        <h2>Join Us</h2>
-        <p>Click here to join! Create an account in Org Link and simply search for Information technology Student association to join.</p>
-      </article>
-    </a>
-    <a href="https://www.allegiantair.com/" class="card-link">
-      <article class="card">
-        <h2>Stay Connected</h2>
-        <p>Follow us on social media or subscribe to our newsletter to stay updated on everything ITSA is doing this semester.</p>
-      </article>
-    </a>
-  </section>
+<section class="content-grid" id="highlights">
+
+  <article class="card">
+    <h2>Vision</h2>
+    <p>
+      To unify all CMIS programs into one intuitive digital platform that streamlines student engagement, enhances faculty operations,
+      strengthens industry partnerships, and empowers alumni involvement.
+    </p>
+  </article>
+
+  <article class="card">
+    <h2>Goal</h2>
+    <p>
+      Improve the CMIS community experience by providing a single platform that supports students, faculty, sponsors, and alumni — while
+      reducing manual work and improving accuracy across operations.
+    </p>
+  </article>
+
+  <article class="card">
+    <h2>For Students</h2>
+    <p>
+      Easy access to events, competitions, mentorship, and career development tools — all in one place.
+    </p>
+  </article>
+
+  <article class="card">
+    <h2>For Faculty</h2>
+    <p>
+      Efficient digital workflows for managing case competitions, event logistics, and communication with students.
+    </p>
+  </article>
+
+  <article class="card">
+    <h2>For Industry Partners</h2>
+    <p>
+      Securely search for student talent, request involvement, and engage with CMIS programs through a dedicated sponsor experience.
+    </p>
+  </article>
+
+  <article class="card">
+    <h2>For Alumni</h2>
+    <p>
+      Structured mentorship and involvement opportunities that strengthen alumni relationships and long-term community support.
+    </p>
+  </article>
+
+</section>
+
 
   <div class="socials">
     <a href="https://www.instagram.com/samhoustonstate/" target="_blank">
