--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -140,7 +140,7 @@
 
   <section class="hero">
     <div class="hero-overlay">
-      <h1>Welcome to CMIS Connect/h1>
+      <h1>Welcome to CMIS Connect</h1>
     </div>
   </section>
 
@@ -198,16 +198,16 @@
 
 
   <div class="socials">
-    <a href="https://www.instagram.com/samhoustonstate/" target="_blank">
+    <a href="https://www.instagram.com/tamu/" target="_blank">
       <img src="/project/images/instagram logo.png" alt="Instagram" />
     </a>
     <br>
-    <a href="https://www.facebook.com/samhoustonstate" target="_blank">
+    <a href="https://www.facebook.com/tamu" target="_blank">
       <img src="/project/images/facebook logo.png" alt="Facebook" />
     </a>
     <br>
-    <a href="https://www.shsu.edu/" target="_blank">
-      <img src="/project/images/newlogo2.png" alt="SHSU Home" />
+    <a href="https://www.tamu.edu/index.html" target="_blank">
+      <img src="/project/images/newlogo2.png" alt="TAMU Home" />
     </a>
     <!-- Add more icons as needed -->
   </div>
