--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -111,8 +111,8 @@
   </style>
 </head>
 <body>
-  <a href="https://www.shsu.edu/" target="_blank" class="floating-logo">
-    <img src="/project/images/newlogo2.png" alt="Website Logo" height="80" width="80">
+  <a href="#homepage" target="_blank" class="floating-logo">
+    <img src="/project/images/tamu/cmis.png" alt="Website Logo" height="80" width="80">
   </a>
   <header>
     <h1>CMIS Connect</h1>
