--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -61,7 +61,7 @@
     <ul class="menu">
       <li><a href="/project/webpages/homepage.html" class="current">Home</a></li>
       <li><a href="/project/webpages/about.html">About</a></li>
-      <li><a href="/project/webpages/officers.html">Stakeholders</a></li>
+      <li><a href="/project/webpages/student-hub.html">Student Hub</a></li>
       <li><a href="/project/webpages/meetings.html">Features</a></li>
       <li><a href="/project/webpages/accomplishments.html">Metrics</a></li>
       <li><a href="/project/webpages/imagegallery.html">Wireframes</a></li>
