--- a/project/webpages/student-hub.html
+++ b/project/webpages/student-hub.html
@@ -111,6 +111,7 @@
 
     <ul class="menu">
       <li><a href="/project/webpages/homepage.html">Home</a></li>
+      <li><a href="/project/webpages/about.html">About</a></li>
       <li><a href="/project/webpages/student-hub.html" class="current">Student Hub</a></li>
       <li><a href="/project/webpages/officers.html">Stakeholders</a></li>
       <li><a href="/project/webpages/meetings.html">Features</a></li>
