--- a/project/webpages/about.html
+++ b/project/webpages/about.html
@@ -112,10 +112,11 @@
     <ul class="menu">
       <li><a href="/project/webpages/homepage.html">Home</a></li>
       <li><a href="/project/webpages/about.html" class="current">About</a></li>
-      <li><a href="/project/webpages/officers.html">Stakeholders</a></li>
-      <li><a href="/project/webpages/meetings.html">Features</a></li>
-      <li><a href="/project/webpages/accomplishments.html">Metrics</a></li>
-      <li><a href="/project/webpages/imagegallery.html">Wireframes</a></li>
+      <li><a href="/project/webpages/student-hub.html">Student Hub</a></li>
+      <li><a href="/project/webpages/case-management.html">Case Mgmt</a></li>
+      <li><a href="/project/webpages/sponsor-portal.html">Sponsor Portal</a></li>
+      <li><a href="/project/webpages/mentorship.html">Mentorship</a></li>
+      <li><a href="/project/webpages/analytics.html">Analytics</a></li>
     </ul>
   </section>
 
