--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -59,12 +59,17 @@
     </label>
 
     <ul class="menu">
-      <li><a href="/project/webpages/homepage.html" class="current">Home</a></li>
-      <li><a href="/project/webpages/about.html">About</a></li>
-      <li><a href="/project/webpages/student-hub.html">Student Hub</a></li>
-      <li><a href="/project/webpages/meetings.html">Features</a></li>
-      <li><a href="/project/webpages/accomplishments.html">Metrics</a></li>
-      <li><a href="/project/webpages/imagegallery.html">Wireframes</a></li>
+<ul class="menu">
+  <li><a href="/project/webpages/homepage.html" class="current">Home</a></li>
+  <li><a href="/project/webpages/about.html">About</a></li>
+  <li><a href="/project/webpages/student-hub.html">Student Hub</a></li>
+  <li><a href="/project/webpages/case-management.html">Case Mgmt</a></li>
+  <li><a href="/project/webpages/sponsor-portal.html">Sponsor Portal</a></li>
+  <li><a href="/project/webpages/mentorship.html">Mentorship</a></li>
+  <li><a href="/project/webpages/analytics.html">Analytics</a></li>
+</ul>
+
+
     </ul>
   </section>
 
